PROJECT(tests C CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ENABLE_TESTING()
FIND_PACKAGE(GTest REQUIRED)

INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/src
	${GTEST_INCLUDE_DIRS}
)

LINK_DIRECTORIES(
)

INCLUDE(Sources.cmake)

ADD_EXECUTABLE(tests ${MODULE_SOURCES})
TARGET_LINK_LIBRARIES(tests algorithms-cpp)
TARGET_LINK_LIBRARIES(tests ${GTEST_BOTH_LIBRARIES})
